--- a/h8_rmt018_final_project_fadya_ulya.ipynb
+++ b/h8_rmt018_final_project_fadya_ulya.ipynb
@@ -113,7 +113,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3 - External Link"
+        "## 3 - External Link\n",
+        "\n",
+        "Deployment: https://huggingface.co/spaces/fadyabila/sales-forecasting-analysis"
       ],
       "metadata": {
         "id": "hJ3Xw5gL9S_E"
@@ -173,7 +175,7 @@
       "metadata": {
         "id": "ZqNjvCv8FUS1"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +190,7 @@
         "id": "0K63PlSonWV8",
         "outputId": "2458c649-be46-4076-e38b-91eaac0a1f8b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,7 +254,7 @@
         "id": "r2u_rJoAJOA_",
         "outputId": "68ffec0a-0555-4588-981d-b5f93405fd62"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +508,7 @@
         "id": "2dASI7VkQx1w",
         "outputId": "a0d19d26-5f25-48eb-8418-6f9327ae07c8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +699,7 @@
         "id": "-4T6gUVJQ_4G",
         "outputId": "061ec398-f07e-434d-91dd-6c0131e80883"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,7 +887,7 @@
         "id": "m1qhLYz77Il2",
         "outputId": "8c033aad-c4e6-4e2c-91c2-dc7e87047f81"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -920,7 +922,7 @@
       "metadata": {
         "id": "Zxh1DiHlS5du"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -957,7 +959,7 @@
         "id": "6cIIsLdbM1RL",
         "outputId": "2ca7f366-06f6-4ccc-92b9-2e3a8be06128"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1004,7 +1006,7 @@
         "id": "fMxkqUDuzWBz",
         "outputId": "68434343-d1b6-4d0b-a1fd-74fe29ffb998"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1052,7 @@
         "id": "1Fu6n6emM8ew",
         "outputId": "3ab53906-7f29-47af-c94d-c3aa69abbd52"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1087,7 +1089,7 @@
       "metadata": {
         "id": "xiPrKpPaZJaq"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1114,7 +1116,7 @@
         "id": "PZMkpRhM3QSu",
         "outputId": "f77907bc-6e3a-4e6c-cba5-829100e09df4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1156,7 +1158,7 @@
         "id": "x9py_oLP3T42",
         "outputId": "0b331cd9-c888-4d32-9de4-506d59b715ac"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1218,7 +1220,7 @@
         "id": "b63VgAPE5Qc9",
         "outputId": "1d8f69d2-ce18-4182-f5d1-744eb8c9c991"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1246,7 +1248,7 @@
         "id": "uS1oZonf3Zgk",
         "outputId": "637651fa-bf2a-4cba-8db8-9778e6cee08b"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1333,7 +1335,7 @@
         "id": "TF5p25VI73l2",
         "outputId": "6c5397d0-93b0-42bb-db22-cf15f46e7513"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1377,7 +1379,7 @@
       "metadata": {
         "id": "UGD3yjfZ7x1J"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1396,7 +1398,7 @@
         "id": "1cgyduPU_N9K",
         "outputId": "ce13601f-f78c-42c0-e168-ded54df8872f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1622,7 +1624,7 @@
         "id": "Jp5YHww2-3w3",
         "outputId": "ff019a50-66df-4f1d-9406-b4b3eb6ecdbe"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1670,7 +1672,7 @@
         "id": "bBirTI80MWQ7",
         "outputId": "21eda8fc-78db-4fba-b2fa-cfdcb2058239"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1729,7 +1731,7 @@
         "id": "l1KwfVPO-FO8",
         "outputId": "d2d48fd2-ef53-4444-a6be-d39eca914473"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1984,7 +1986,7 @@
         "id": "rcyWmUforojR",
         "outputId": "86564ef4-c2d5-41ea-d17e-3cdf3a3a0101"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2177,7 +2179,7 @@
         "id": "chBj3128EhIR",
         "outputId": "a6895c35-80fc-4119-e64b-411a86f09b49"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2238,7 +2240,7 @@
         "id": "LDI3DLXJC5ty",
         "outputId": "fb2fbf12-bd47-42d6-8bd4-da41552c4b59"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2291,7 +2293,7 @@
         "id": "75j7WdbmFVNu",
         "outputId": "0aefd7a8-eff1-479c-f5b9-7b2b6164d78f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2531,7 +2533,7 @@
         "id": "f77e8f-3GPOh",
         "outputId": "6315a29d-28f6-4dd6-da80-7d0cec076ae3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2605,7 +2607,7 @@
         "id": "NMNV6HMTNsfq",
         "outputId": "88c75eca-01ae-4065-fabb-76ceb98a7a6f"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2774,7 +2776,7 @@
         "id": "TldO3CQ_OHBR",
         "outputId": "03066c91-ea63-4aeb-f81d-8518c524ce77"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2859,7 +2861,7 @@
         "id": "NEGMt8D9OfSN",
         "outputId": "1bb5fe2d-5f53-4b44-f957-ecd8a05fe1a0"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3028,7 +3030,7 @@
         "id": "yuuxtBtePJT5",
         "outputId": "4a72bbc2-95c4-4020-d48a-b44b70baa49d"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3133,7 +3135,7 @@
       "metadata": {
         "id": "81j3OirjQQIi"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3154,7 +3156,7 @@
         "id": "mv1I6GQbROsB",
         "outputId": "04090836-a1e5-4861-965e-ec7420363f92"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3251,7 +3253,7 @@
         "id": "C3DOJGP9c7hB",
         "outputId": "da69146c-4153-4cb7-881b-5b345d10a499"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3313,7 +3315,7 @@
         "id": "EZJLg-8qHPoB",
         "outputId": "dea30aeb-9b03-4a84-99e1-14ee2e99c9ff"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3523,7 +3525,7 @@
         "id": "e1KqWzrWID4_",
         "outputId": "be35bb5e-03b4-46f0-b37f-f102fd1ba989"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3572,7 +3574,7 @@
         "id": "tLORtPepHXHs",
         "outputId": "1901f811-a5d4-4fde-af3b-06df0634f05d"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3671,7 +3673,7 @@
         "id": "n0q93iwsIKf1",
         "outputId": "257e782d-3623-4da9-d9db-ec3c62681163"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3889,7 +3891,7 @@
       "metadata": {
         "id": "4kOQLvaAIOoK"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3917,7 +3919,7 @@
         "id": "B28pv_j3IP9Z",
         "outputId": "634fbcdf-9624-40ac-a3aa-cc01c43e73b3"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3954,7 +3956,7 @@
       "metadata": {
         "id": "R81o1icDItUI"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4026,7 +4028,7 @@
         "id": "IXjd0hqJIyAT",
         "outputId": "1a5f46e8-cc6a-42c8-d5b4-1a043ca7d405"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4066,7 +4068,7 @@
         "id": "qgWyIQTWOidu",
         "outputId": "9f175691-af1e-4ea6-f60a-1fd347950906"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4109,7 +4111,7 @@
         "id": "360cAYPvTE5X",
         "outputId": "bd1e73cf-0927-43ec-81fa-c90677713c9b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4150,7 +4152,7 @@
         "id": "DEF1iVflTbo8",
         "outputId": "1a0310dd-ff49-4f7b-c750-6155a35d9bb6"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4177,7 +4179,7 @@
         "id": "w6C1tXe7Wvse",
         "outputId": "64277073-7c68-4b44-ed0c-824b71e21745"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4231,7 +4233,7 @@
         "id": "EUwyJxOdW6_z",
         "outputId": "5571346b-4fb8-46b4-84fb-7df697d7afd0"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4293,7 +4295,7 @@
         "id": "XLcJWnQPfRvd",
         "outputId": "a269fa81-1d6d-41d9-ab0a-cda2099657f6"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4336,7 +4338,7 @@
         "id": "ZPuMx0fPVSvZ",
         "outputId": "5a11bdc4-a1f4-4a4b-e5e2-16eb294b9549"
       },
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4453,7 +4455,7 @@
         "id": "4qUEU1SQXCTQ",
         "outputId": "dbc11676-7dec-4069-ed03-f4557e8a2b85"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4503,7 +4505,7 @@
         "id": "kFCYzap6f7lC",
         "outputId": "cb7459af-c09c-4bbc-df99-1cc6ce8e617e"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4530,7 +4532,7 @@
         "id": "42nUn5YRg6n2",
         "outputId": "71b00595-7d15-4503-a4d7-c676018cdc56"
       },
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4575,7 +4577,7 @@
         "id": "ldSd3yNDhE_v",
         "outputId": "1acae188-0657-49a8-e2fb-3eb3f4aa7ab2"
       },
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4637,7 +4639,7 @@
         "id": "ziyCExHFiHky",
         "outputId": "18be993d-cb70-46e6-f9c6-e7443c021b97"
       },
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4680,7 +4682,7 @@
         "id": "VZEIw2LnYmKM",
         "outputId": "fd950639-bff7-47b1-e3d2-180718c9bc60"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4732,7 +4734,7 @@
         "id": "zf8nlUdFdKm8",
         "outputId": "c8fe050c-5a44-4142-a0e6-85ca05a99776"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4772,7 +4774,7 @@
         "id": "ZsSsaoNWiWxu",
         "outputId": "33742d5b-6ff9-44f0-85a4-99c9c98dac9a"
       },
-      "execution_count": 116,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4799,7 +4801,7 @@
         "id": "l3QvLNnPjSFI",
         "outputId": "fbce5f26-4178-4165-b957-aa11847b5e50"
       },
-      "execution_count": 117,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4853,7 +4855,7 @@
         "id": "J21OBYgIjayS",
         "outputId": "59014445-2de0-43a0-ab3a-1fdafb927c0b"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4915,7 +4917,7 @@
         "id": "T0fElKxnIFeH",
         "outputId": "0b16926d-5a22-42a4-b036-f5c7df7d8740"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4957,7 +4959,7 @@
         "id": "z3-ut3uAJ47A",
         "outputId": "f0c04fd0-ee46-492b-8ab2-263049aece36"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5006,7 +5008,7 @@
         "id": "FF1Y3RqeK598",
         "outputId": "9331a70d-c61e-4b7b-d612-00b07cf6f26a"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5050,7 +5052,7 @@
         "id": "SWMMg3ZCkmjM",
         "outputId": "e6b6a06b-549e-4b87-8ab3-922a76437dd8"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5078,7 +5080,7 @@
         "id": "FIAFsDEWJdYi",
         "outputId": "8f55f335-50ca-4517-8f4e-b9e4baa3f374"
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5132,7 +5134,7 @@
         "id": "zTHGPARgJkc1",
         "outputId": "7c8ac08f-fbbd-4c81-dcfa-d8383dc086d4"
       },
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5192,7 +5194,7 @@
         "id": "2ik5GxPstRPZ",
         "outputId": "752ca91d-8f91-4656-b453-831d604dcf39"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5378,7 +5380,7 @@
         "id": "PzqN8iTauOiF",
         "outputId": "50ffd86e-487b-4fcc-d059-af6506064a0d"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5584,7 +5586,7 @@
         "id": "xfacMkN97dxJ",
         "outputId": "67a195f5-2dfd-42c6-8788-3cc7c27d0c43"
       },
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5638,7 +5640,7 @@
         "id": "JgGPHfVK7lmn",
         "outputId": "31d63cf0-48e0-48f2-b166-a7d673eba43b"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5736,7 +5738,7 @@
       "metadata": {
         "id": "7xxDxSsIJdWy"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5753,7 +5755,7 @@
         "id": "7aEnkPxIJkid",
         "outputId": "7114c92d-321c-425a-aede-8b3e36bfdf76"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5797,7 +5799,7 @@
         "id": "bNjMXmtkJrC9",
         "outputId": "ad91bcd4-64df-4106-cf4e-5f47da56e212"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5933,7 +5935,7 @@
         "id": "li5_9QxmVMlS",
         "outputId": "38b443e4-3194-47cc-d1f0-e773b81cf736"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5992,7 +5994,7 @@
         "id": "Zpnfir3KVOaA",
         "outputId": "5a3ab073-7139-4f2f-8409-d045a35be6f2"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6080,7 +6082,20 @@
       "metadata": {
         "id": "4t7mv9FnPsyb"
       },
-      "execution_count": 53,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save dataframe in csv\n",
+        "\n",
+        "quantity_flow1.to_csv('quantity_flow1.csv', index=False)"
+      ],
+      "metadata": {
+        "id": "_7uRARVCeZb4"
+      },
+      "execution_count": 54,
       "outputs": []
     },
     {
