--- a/h8_rmt018_final_project_fadya_ulya.ipynb
+++ b/h8_rmt018_final_project_fadya_ulya.ipynb
@@ -3956,7 +3956,7 @@
       "metadata": {
         "id": "R81o1icDItUI"
       },
-      "execution_count": null,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -6073,16 +6073,19 @@
     {
       "cell_type": "code",
       "source": [
+        "# Save the model\n",
         "import pickle\n",
         "\n",
-        "# Save the model\n",
-        "filename = 'linreg_model.pkl'\n",
-        "pickle.dump(model_lr, open(filename, 'wb'))"
+        "with open('linreg_model.pkl', 'wb') as file_1:\n",
+        "  pickle.dump(model_lr, file_1)\n",
+        "\n",
+        "with open('num_columns.pkl', 'wb') as file_2:\n",
+        "  pickle.dump(scaler, file_2)"
       ],
       "metadata": {
         "id": "4t7mv9FnPsyb"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
